# oneDNN

examples/graph/: cpu_elyzor_test.cpp
src/: CMakeLists.txt
src/graph/backend/elyzor/: CMakeLists.txt  README.md  compiler_backend.cpp  compiler_backend.hpp  compiler_loader.cpp  compiler_loader.hpp  compiler_partition_impl.cpp  compiler_partition_impl.hpp  elyzor_backend.cpp  elyzor_backend.hpp  elyzor_partition_impl.cpp  elyzor_partition_impl.hpp  target_machine.hpp  utils.cpp  utils.hpp
src/graph/backend/elyzor/include/: dnnl_graph_compiler.h  dnnl_graph_compiler_version.h.in
src/graph/backend/elyzor/patterns/: concat_pattern.hpp  conv_pattern.hpp  fusions.hpp  mha_pattern.hpp  misc_pattern.hpp  mlp_pattern.hpp  pattern_utils.hpp  single_op_pattern.hpp  transformation_pattern.hpp
src/graph/interface/: backend.hpp  graph.hpp
tests/gtests/: CMakeLists.txt
tests/gtests/graph/unit/backend/: CMakeLists.txt
tests/gtests/graph/unit/backend/elyzor/: CMakeLists.txt  test_compile_execute.cpp  test_utils.hpp
